# imos-user-code-library

./: .gitignore  Berksfile  IMOS_user_code_library.odt  IMOS_user_code_library_DRAFT.odt  IMOS_user_code_library_DRAFT_2012_02_18_V1_for_finalReview.odt  IMOS_user_code_library_DRAFT_2012_02_18_V1_with_exportCSV_for_review.odt  IMOS_user_code_library_DRAFT_2013_04_04_V1_for_finalReview.odt  README.md  Vagrantfile
.vagrant/: Berksfile  Vagrantfile
BioOptical_UserCode_matlab/: example.m
BioOptical_UserCode_matlab/absorption/: getAbsorptionInfo.m
BioOptical_UserCode_matlab/pigment/: getPigmentData.m  getPigmentInfo.m  plotPigment.m
BioOptical_UserCode_matlab/subroutines/: getGlobAttNC.m  getVarNetCDF.m
MATLAB_R2011/: IMOS_user_code_library_Examples_Matlab.odt
MATLAB_R2011/demos/: aatams.m  abos.m  acorn.m  anfog.m  anmn_adcp.m  argo1.m  argo2.m  auv.m  demo_imosAccumarray.m  dwm.m  faimms.m  soop_sst.m  soop_xbt.m  srs_BioOptical_absorption.m  srs_BioOptical_pigment.m  srs_l3c.m  srs_l3p.m  srs_l3s.m
NESP/: README.md  amsa.Rmd  amsa.ipynb  dugong.ipynb  h3.md  pyproject.toml  requirements.txt  seabird.Rmd  seabird.ipynb  seagrass-updated.ipynb  seagrass.Rmd  seagrass.ipynb  temp.ipynb  template.ipynb  util.py
NESP/amsa/: README.md  amsa.Rmd  amsa.ipynb
NESP/dugongs/: README.md
NESP/kelp/: README.md
NESP/nesp/: __init__.py  util.py
NESP/nrmn/: README.md
NESP/seabird/: README.md  seabird.Rmd  seabird.ipynb
NESP/seagrass/: README.md  seagrass.ipynb
Python/: .gitignore  IMOS_user_code_library_Examples_Python.odt
Python/commons/: imosNetCDF.py
(+111 files in other folders)
