[project]
name = "nesp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "pandas==2.3.3",
    "polars>=1.37.1",
    "polars-h3>=0.6.1",
    "polars-st>=0.4.3",
    "pyarrow>=23.0.0",
    "pydeck>=0.9.1",
    "rich>=14.3.1",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.0",
]
